[tool.poetry]
name = "re-grass-pic-bot"
version = "0.1.0"
description = ""
authors = ["hsn <hsn1919810@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.23.0"
aiohttp = "^3.10.6"
loguru = "^0.7.2"
tinydb = "^4.8.0"
twitter-api-client = "^0.10.22"
pillow = "^10.4.0"
feedparser = "^6.0.11"
httpx = "^0.27.2"
pydantic = "^2.9.2"
schedule = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
